--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.13.3/dist/tf.min.js"> </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
+    <script src="/js/board.js"></script>
     <script src="/js/app.js"></script>
+   
 </body>
 </html>
