--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         <div class="main">
             <div class="main-left">
                 <canvas id="canvas"></canvas>
-                <select class="selector">
+                <select class="selector" id="selectorButton">
                     <option value="cnn">CNN</option>
                     <option value="mlp">MLP</option>
                 </select>
