--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,12 @@
                     <option value="mlp">MLP</option>
                 </select>
                 <button id="predictButton">ამოცნობა</button>
-                <button>წაშლა</button>   
+                <button id="clearButton">წაშლა</button>   
             </div>
             <div class="main-right">
                 <canvas id="myChart" height="300"></canvas>
             </div>
         </div>
-       
     </div>
         
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.13.3/dist/tf.min.js"> </script>
@@ -36,6 +35,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
     <script src="/js/board.js"></script>
     <script src="/js/app.js"></script>
-   
 </body>
 </html>
